--- a/Exercício 8 - Média anual de notas.html
+++ b/Exercício 8 - Média anual de notas.html
@@ -10,7 +10,7 @@
         //8. Construa um programa onde o usuário digitará quatro notas escolares de um aluno referente aos 4 bimestres do ano e o programa irá calcular a média anual, caso seja menor que 6, exibirá na tela: “Aluno Reprovado”. Caso seja maior ou igual a 6 exibirá na tela: “Aluno Aprovado”.
         
         alert("Vamos calcular a média anual das notas de um aluno");
-        let nomedoaluno = Number(prompt("Digite o nome do aluno: "));
+        let nomedoaluno = (prompt("Digite o nome do aluno: "));
         
         let nota_1bim = Number(prompt("Digite a nota do primeiro bimestre: "));
         let nota_2bim = Number(prompt("Digite a nota do segundo bimestre:"));
