Exercício 6 - Menor dos números.html

--- a/Exercício 6 - Menor dos números.html
+++ b/Exercício 6 - Menor dos números.html
@@ -16,6 +16,9 @@
         if(numero1 < numero2){
             alert("O menor número é "+numero1);
         }
+        else if(numero1>numero2){
+            alert("O maior número é "+numero2)
+        }
         else{
             alert("O menor número é "+numero2);
         }
